welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: not found: value Talking
	Talking=false
        ^parotTrouble:6: error: not found: value Talking
}else{Talking=true}
      ^