welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
var f:Boolean=false
if (hour>7 && hour<20){
	Talking=false
	
}else{Talking=true}
return f;
}